optimized DTOs, cleaned up overall codebase